Fix site-nav getting squished on mobile

--- a/sass/_include/nav.scss
+++ b/sass/_include/nav.scss
@@ -8,6 +8,7 @@
 
         display: flex;
         justify-content: flex-end;
+        flex-wrap: wrap;
 
         list-style: none;
     }
